// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render panel with content 1`] = `
<div
  className="vxteaser-panel"
  style={
    Object {
      "width": "50%",
    }
  }
>
  Panel content
</div>
`;

exports[`render panel with content and modifier 1`] = `
<div
  className="vxteaser-panel -mb-5"
  style={
    Object {
      "width": "50%",
    }
  }
>
  Panel content
</div>
`;
